--- a/stingeripc/templates/rust/server/src/lib.rs.jinja2
+++ b/stingeripc/templates/rust/server/src/lib.rs.jinja2
@@ -13,7 +13,7 @@ use paho_mqtt::topic_matcher::TopicMatcher;
 
 pub struct {{stinger.name}}Server {
     connection: Connection,
-    topic_matcher: TopicMatcher::<Box<dyn FnMut(std::string::String, std::string::String)>>,
+    topic_matcher: TopicMatcher::<Box<dyn Fn(std::string::String, std::string::String)>>,
 }
 
 impl {{stinger.name}}Server {
@@ -22,7 +22,7 @@ impl {{stinger.name}}Server {
         let interface_info = String::from(r#"{{stinger.interface_info.1 | tojson}}"#);
         connection.publish("{{stinger.interface_info.0}}".to_string(), interface_info, 1);
 
-        let mut topic_matcher = TopicMatcher::<Box<dyn FnMut(String, String)>>::new();
+        let mut topic_matcher = TopicMatcher::<Box<dyn Fn(String, String)>>::new();
         {%for method_name, method in stinger.signals.items()-%}
         topic_matcher.insert("{{method.topic}}", Box::new(Self::handle_{{method_name|snake_case}}_request));
         {%endfor%}
@@ -49,18 +49,17 @@ impl {{stinger.name}}Server {
     {%endfor%}
 
     {%for method_name, method in stinger.signals.items()-%}
-    fn handle_{{method_name|snake_case}}_request(_topic: String, _payload: String) {
-
+    fn handle_{{method_name|snake_case}}_request(_topic: String, payload: String) {
+        let _payload_object = json::parse(&payload).unwrap();
     }
     {%endfor%}
 
     pub async fn process(&mut self) {
         while let Some(opt_msg) = self.connection.rx.next().await {
             if let Some(msg) = opt_msg {
-                //let payload_object = json::parse(&msg.payload_str()).unwrap();
                 let topic = &msg.topic();
-                if let Some(_box_fn) = self.topic_matcher.get(topic) {
-                    println!("Matches");
+                for item in self.topic_matcher.matches(topic) {
+                    (&item.1)(topic.to_string(),msg.payload_str().to_string());
                 }
             }
         }
