Rust receive method args

--- a/stingeripc/templates/rust/server/src/lib.rs.jinja2
+++ b/stingeripc/templates/rust/server/src/lib.rs.jinja2
@@ -13,7 +13,10 @@ use paho_mqtt::topic_matcher::TopicMatcher;
 
 pub struct {{stinger.name}}Server {
     connection: Connection,
-    topic_matcher: TopicMatcher::<Box<dyn Fn(std::string::String, std::string::String)>>,
+    {%for method_name, method in stinger.methods.items()-%}
+        method_handler_for_{{method_name|snake_case}}: Box<dyn FnMut({%for arg in method.arg_list%}{{arg.rust_type}}{%if not loop.last%}, {%endif%}{%endfor%})->()>,
+    {%endfor%}
+    topic_matcher: TopicMatcher::<u32>,
 }
 
 impl {{stinger.name}}Server {
@@ -22,13 +25,16 @@ impl {{stinger.name}}Server {
         let interface_info = String::from(r#"{{stinger.interface_info.1 | tojson}}"#);
         connection.publish("{{stinger.interface_info.0}}".to_string(), interface_info, 1);
 
-        let mut topic_matcher = TopicMatcher::<Box<dyn Fn(String, String)>>::new();
-        {%for method_name, method in stinger.signals.items()-%}
-        topic_matcher.insert("{{method.topic}}", Box::new(Self::handle_{{method_name|snake_case}}_request));
+        let {%if stinger.methods | length > 0%}mut{%endif%} topic_matcher = TopicMatcher::<u32>::new();
+        {%for method_name, method in stinger.methods.items()-%}
+        topic_matcher.insert("{{method.topic}}", {{loop.index}});
         {%endfor%}
 
-        {{stinger.name}}Server{
+        {{stinger.name}}Server {
             connection: connection,
+            {%for method_name, method in stinger.methods.items()-%}
+            method_handler_for_{{method_name|snake_case}}: Box::new( |{%for arg in method.arg_list-%}_{{loop.index}}{%if not loop.last%}, {%endif%}{%endfor%}| {} ),
+            {%endfor%}
             topic_matcher: topic_matcher,
         }
     }
@@ -48,9 +54,24 @@ impl {{stinger.name}}Server {
     }
     {%endfor%}
 
-    {%for method_name, method in stinger.signals.items()-%}
-    fn handle_{{method_name|snake_case}}_request(_topic: String, payload: String) {
-        let _payload_object = json::parse(&payload).unwrap();
+    {%for method_name, method in stinger.methods.items()-%}
+    pub fn set_method_handler_for_{{method_name|snake_case}}(&mut self, cb: impl FnMut({%for arg in method.arg_list%}{{arg.rust_type}}{%if not loop.last%}, {%endif%}{%endfor%})->() + 'static) {
+        self.method_handler_for_{{method_name|snake_case}} = Box::new(cb);
+        self.connection.subscribe(String::from("{{method.topic}}"), 2);
+    }
+    {%endfor%}
+
+    {%for method_name, method in stinger.methods.items()-%}
+    fn handle_{{method_name|snake_case}}_request(&mut self, _topic: String, payload: String) {
+        let payload_object = json::parse(&payload).unwrap();
+        {%for arg in method.arg_list-%}
+        {%-if arg.arg_type.name.lower() == 'value'%}
+        let temp_{{arg.name | snake_case}} = payload_object["{{arg.name}}"].{%if arg.rust_type == 'String'%}as_str().unwrap().to_string(){%else%}as_{{arg.rust_type}}().unwrap(){%endif%};
+        {%elif arg.arg_type.name.lower() == 'enum'%}
+        let temp_{{arg.name | snake_case}} = {{arg.rust_type}}::from_u32(payload_object["{{arg.name}}"].as_u32().unwrap());
+        {%endif%}
+        {%endfor%}
+        (self.method_handler_for_{{method_name|snake_case}})({%for arg in method.arg_list%}temp_{{arg.name | snake_case}}{%if not loop.last%}, {%endif%}{%endfor%});
     }
     {%endfor%}
 
@@ -58,8 +79,16 @@ impl {{stinger.name}}Server {
         while let Some(opt_msg) = self.connection.rx.next().await {
             if let Some(msg) = opt_msg {
                 let topic = &msg.topic();
+                let mut func_indexs: Vec<u32> = Vec::new();
                 for item in self.topic_matcher.matches(topic) {
-                    (&item.1)(topic.to_string(),msg.payload_str().to_string());
+                    func_indexs.push(item.1);
+                }
+                for func_index in func_indexs.iter() {
+                    match func_index { {%-for method_name, method in stinger.methods.items()%}
+                        {{loop.index}} => self.handle_{{method_name|snake_case}}_request(topic.to_string(), msg.payload_str().to_string()),
+                    {%endfor-%}
+                        _ => ()
+                    }
                 }
             }
         }
