Using async with rust connection

--- a/stingeripc/templates/rust/client/examples/client.rs.jinja2
+++ b/stingeripc/templates/rust/client/examples/client.rs.jinja2
@@ -9,13 +9,14 @@ fn print_{{sig_name|snake_case}}({%for arg in sig.arg_list%}{{arg.name|snake_cas
 {%endfor%}
 
 fn main() {
-    {%set broker = stinger.get_example_broker()%}
-    let connection = Connection::new_{{broker.class_name|snake_case}}({%if broker.hostname is none%}String::from("localhost"){%if broker.port is none%}, {%endif%}{%endif%}{%if broker.port is none%}1883{%endif%});
-    let mut client = {{stinger.name}}Client::new(connection);
-    {%for sig_name, sig in stinger.signals.items()%}
-    client.set_signal_recv_callbacks_for_{{sig_name|snake_case}}(print_{{sig_name|snake_case}});
-    {%endfor%}
     block_on(async {
+        {%set broker = stinger.get_example_broker()%}
+        let connection = Connection::new_{{broker.class_name|snake_case}}({%if broker.hostname is none%}String::from("localhost"){%if broker.port is none%}, {%endif%}{%endif%}{%if broker.port is none%}1883{%endif%}).await;
+        let mut client = {{stinger.name}}Client::new(connection);
+        {%for sig_name, sig in stinger.signals.items()%}
+        client.set_signal_recv_callbacks_for_{{sig_name|snake_case}}(print_{{sig_name|snake_case}});
+        {%endfor%}
+        
         client.process().await;
     });
     // Ctrl-C to stop
